--- a/MoneySac/res/menu/category_detail.xml
+++ b/MoneySac/res/menu/category_detail.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_category_delete"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="always"
+        android:title="@string/delete"
+        android:icon="@drawable/delete"/>
 
 </menu>
