--- a/MoneySac/res/layout/activity_category_detail.xml
+++ b/MoneySac/res/layout/activity_category_detail.xml
@@ -8,77 +8,59 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CategoryDetailActivity" >
 
-    <LinearLayout
-        android:id="@+id/moneysac_detail_category_bt_layout"
+    <RelativeLayout
+        android:id="@+id/layoutCategoryDetail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/moneysac_detail_categoryl_bt_save"
+        <TextView
+            android:id="@+id/moneysac_detail_category_txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Speichern" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="Name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <Button
-            android:id="@+id/moneysac_detail_category_bt_cancel"
+        <EditText
+            android:id="@+id/moneysac_detail_category_edit_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Abbrechen" />
-    </LinearLayout>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:inputType="text"
+            android:layout_below="@+id/moneysac_detail_category_txt_title"
+            android:ems="10" >
+			
+        </EditText>
 
-    <ScrollView
+        <TextView
+            android:id="@+id/moneysac_detail_category_txt_priority"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/moneysac_detail_category_edit_title"
+            android:layout_marginTop="10dp"
+            android:text="Typ"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Spinner
+            android:id="@+id/moneysac_detail_category_typ_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/moneysac_detail_category_txt_priority" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/moneysac_detail_category_bt_save"
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/moneysac_detail_category_bt_layout"
-        android:layout_alignParentTop="true" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/moneysac_detail_category_txt_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:text="Name"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <EditText
-                android:id="@+id/moneysac_detail_category_edit_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/moneysac_detail_category_txt_title"
-                android:ems="10" >
-
-                <requestFocus />
-            </EditText>
-
-            <TextView
-                android:id="@+id/moneysac_detail_category_txt_priority"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/moneysac_detail_category_edit_title"
-                android:text="Typ"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <Spinner
-                android:id="@+id/moneysac_detail_category_typ_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/moneysac_detail_category_txt_priority" />
-        </RelativeLayout>
-    </ScrollView>
+        android:layout_below="@id/layoutCategoryDetail"
+        android:textStyle="bold"
+        android:textSize="35sp"
+        android:text="+" />
 
 </RelativeLayout>
