--- a/MoneySac/res/layout/activity_edit_entry.xml
+++ b/MoneySac/res/layout/activity_edit_entry.xml
@@ -130,6 +130,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="+"
+        android:onClick="persistClicked"
         android:textSize="35sp"
         android:textStyle="bold" />
 
