Kategorie-Handling angepasst. Typen werden nun einfacher ausgelesen und beim neu laden angezeigt. Button-Actions sind in der XML drin

--- a/MoneySac/res/layout/activity_category_detail.xml
+++ b/MoneySac/res/layout/activity_category_detail.xml
@@ -61,6 +61,7 @@
         android:layout_below="@id/layoutCategoryDetail"
         android:textStyle="bold"
         android:textSize="35sp"
+        android:onClick="save"
         android:text="+" />
 
 </RelativeLayout>
