--- a/MoneySac/res/layout/activity_moneysac_category_list_view.xml
+++ b/MoneySac/res/layout/activity_moneysac_category_list_view.xml
@@ -24,6 +24,7 @@
             android:layout_weight="1"
             android:text="@string/strAddIncome"
             android:textSize="35sp"
+            android:onClick="startAddCategory"
             android:textStyle="bold" />
     </LinearLayout>
     
