DatePickerFragment aufgeräumt, SegmentedButtons funktionieren jetzt

--- a/MoneySac/res/layout/activity_edit_entry.xml
+++ b/MoneySac/res/layout/activity_edit_entry.xml
@@ -54,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".55"
-            android:text="blah" />
+            android:text="3.50" />
 
         <TextView
             android:id="@+id/textViewEntryEuro"
