--- a/MoneySac/res/layout/listrow.xml
+++ b/MoneySac/res/layout/listrow.xml
@@ -10,16 +10,14 @@
         android:layout_weight=".15"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:text="when"/>
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
 
     <TextView
         android:id="@+id/textViewListRowDesc"
         android:layout_weight=".55"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:text="What?"/>
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
 
     <TextView
         android:id="@+id/textViewListRowAmount"
@@ -27,24 +25,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:text="Amount"/>
-
-    <TextView
-        android:id="@+id/textViewListRowEuro"
-        android:layout_weight=".05"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-        android:text=" €"/>
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
 
     <ImageView
         android:id="@+id/imageViewListRowArrow"
+        android:contentDescription=""
         android:layout_width="0dp"
         android:layout_weight=".05"
         android:paddingTop="5dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrow_green"/>
+        android:layout_height="wrap_content"/>
 <!--
     <ImageView
         android:id="@+id/icon"
