--- a/MoneySac/res/layout/activity_edit_entry.xml
+++ b/MoneySac/res/layout/activity_edit_entry.xml
@@ -127,7 +127,7 @@
         <Button
             android:id="@+id/buttonUploadPicture"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight=".8"
             android:onClick="takePictureOfBill"
             android:textSize="12sp"
@@ -136,7 +136,7 @@
         <ImageButton
             android:id="@+id/buttonShowPicture"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight=".2"
             android:src="@drawable/icon_lupe"
             android:onClick="seePictureOfBill"
