--- a/MoneySac/res/menu/menu_moneysac_main.xml
+++ b/MoneySac/res/menu/menu_moneysac_main.xml
@@ -29,6 +29,16 @@
                 android:orderInCategory="3"
                 android:showAsAction="never"
                 android:title="@string/menu_stats"/>
+            <item
+                android:id="@+id/add_recurring_income"
+                android:orderInCategory="4"
+                android:showAsAction="never"
+                android:title="@string/menu_recurring_income"/>
+            <item
+                android:id="@+id/add_recurring_expense"
+                android:orderInCategory="4"
+                android:showAsAction="never"
+                android:title="@string/menu_recurring_expense"/>
         </menu>
     </item>
 
