--- a/MoneySac/res/layout/widget_layout.xml
+++ b/MoneySac/res/layout/widget_layout.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/appwidget_button_left"
-            android:text="-"
+            android:text="@string/strAddExpense"
             android:textColor="@color/White"
             android:textSize="55sp"
             android:textStyle="bold" />
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/appwidget_button_right"
-            android:text="+"
+            android:text="@string/strAddIncome"
             android:textColor="@color/White"
             android:textSize="55sp"
             android:textStyle="bold" />
