--- a/MoneySac/res/menu/menu_moneysac_main.xml
+++ b/MoneySac/res/menu/menu_moneysac_main.xml
@@ -36,9 +36,15 @@
                 android:title="@string/menu_recurring_income"/>
             <item
                 android:id="@+id/add_recurring_expense"
-                android:orderInCategory="4"
+                android:orderInCategory="5"
                 android:showAsAction="never"
                 android:title="@string/menu_recurring_expense"/>
+            <item
+                android:id="@+id/menu_main_settings"
+                android:icon="@drawable/ic_settings"
+                android:orderInCategory="6"
+                android:showAsAction="never"
+                android:title="@string/menu_settings"/>
         </menu>
     </item>
 
