--- a/MoneySac/res/xml/preferences.xml
+++ b/MoneySac/res/xml/preferences.xml
@@ -7,6 +7,12 @@
 	        android:summary="@string/settings_safe_login_summary"
 	        android:key="safe_login"
 	        android:defaultValue="false" />
+	    <EditTextPreference
+	        android:title="@string/settings_pin"
+	        android:summary="@string/settings_pin_summary"
+	        android:key="login_pin"
+	        android:inputType="numberPassword" 
+	        android:defaultValue="" />
     </PreferenceCategory>
     <PreferenceCategory 
         android:title="@string/settings_other" >
