--- a/MoneySac/res/layout/activity_edit_entry.xml
+++ b/MoneySac/res/layout/activity_edit_entry.xml
@@ -127,15 +127,15 @@
             android:layout_height="match_parent"
             android:layout_weight=".8"
             android:onClick="takePictureOfBill"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:text="@string/add_photo" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/buttonShowPicture"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight=".2"
-            android:src="@drawable/icon_lupe"
+            android:src="@drawable/pictures_folder"
             android:onClick="seePictureOfBill"
             />
     </LinearLayout>
