--- a/MoneySac/res/values/dimens.xml
+++ b/MoneySac/res/values/dimens.xml
@@ -4,6 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="moneysac_category_listrow_padding_img">10dp</dimen>
     <dimen name="athenticator_pw_size">25dp</dimen>
-    <dimen name="athenticator_pin_padding">7dp</dimen>
-    <dimen name="athenticator_check_padding">7dp</dimen>
+    <dimen name="athenticator_padding">7dp</dimen>
 </resources>
