--- a/MoneySac/res/layout/widget_layout.xml
+++ b/MoneySac/res/layout/widget_layout.xml
@@ -29,18 +29,15 @@
             android:textSize="55sp"
             android:textStyle="bold" />
 
-        <TextView
+        <ImageView
             android:id="@+id/widgetView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/appwidget_dark_bg"
-            android:paddingLeft="20dp"
-            android:paddingRight="30dp"
-            android:paddingTop="30dp"
-            android:text="+100%"
-            android:textColor="@color/Green"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:background="@drawable/ic_launcher"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
     </LinearLayout>
 
 </FrameLayout>
